--- a/index.html
+++ b/index.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Interactive rating component</title>
-
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
+  <div class="center-my-content">
+    <!-- Rating state start -->
+    <div class="container">
+      <div id="rating" class="rating" aria-expanded="true">
+        <img class="logo" src="./images/icon-star.svg" alt="">
+        <h1>How did we do?</h1>
 
-  <!-- Rating state start -->
+        <p>
+          Please let us know how we did with your support request. All feedback is appreciated
+          to help us improve our offering!
+        </p>
 
-  How did we do?
+        <div class="rating-score">
+          <span id="score-1" class="rate">1</span>
+          <span id="score-2" class="rate">2</span>
+          <span id="score-3" class="rate">3</span>
+          <span id="score-4" class="rate">4</span>
+          <span id="score-5" class="rate">5</span>
+        </div>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+        <a id="submit" class="btn" href="#">Submit</a>
+      </div>
 
-  1 2 3 4 5
+      <!-- Rating state end -->
 
-  Submit
+      <!-- Thank you state start -->
+      <div id="thank-you" class="thank-you hidden" aria-expanded="false">
+        <img src="./images/illustration-thank-you.svg" alt="">
+        <div id="selected-rate" class="selected-rate">You selected @rate out of 5</div>
 
-  <!-- Rating state end -->
+        <div class="thanks-title">Thank you!</div>
 
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+        <div class="thanks-msg">
+        We appreciate you taking the time to give a rating. If you ever need more support,
+        don't hesitate to get in touch!</div>
+      </div>
+    </div>
+    <!-- Thank you state end -->
   </div>
+  <script src="./js/app.js"></script>
 </body>
+
 </html>
