--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="center-my-content">
+  <main class="center-my-content">
     <!-- Rating state start -->
     <div class="container">
       <div id="rating" class="rating" aria-expanded="true">
@@ -49,7 +49,7 @@
       </div>
     </div>
     <!-- Thank you state end -->
-  </div>
+  </main>
   <script src="./js/app.js"></script>
 </body>
 
