update solution for accessibility (focus)

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </p>
 
         <div class="rating-score">
-          <span id="score-1" class="rate">1</span>
-          <span id="score-2" class="rate">2</span>
-          <span id="score-3" class="rate">3</span>
-          <span id="score-4" class="rate">4</span>
-          <span id="score-5" class="rate">5</span>
+          <button id="score-1" class="rate">1</button>
+          <button id="score-2" class="rate">2</button>
+          <button id="score-3" class="rate">3</button>
+          <button id="score-4" class="rate">4</button>
+          <button id="score-5" class="rate">5</button>
         </div>
 
         <a id="submit" class="btn" href="#">Submit</a>
@@ -39,7 +39,7 @@
       <!-- Thank you state start -->
       <div id="thank-you" class="thank-you hidden" aria-expanded="false">
         <img src="./images/illustration-thank-you.svg" alt="">
-        <div id="selected-rate" class="selected-rate">You selected @rate out of 5</div>
+        <div id="selected-rate" class="selected-rate" title="You selected @rate out of 5"></div>
 
         <div class="thanks-title">Thank you!</div>
 
