changed buttons into radio buttons

--- a/index.html
+++ b/index.html
@@ -23,13 +23,24 @@
           to help us improve our offering!
         </p>
 
-        <div class="rating-score">
-          <button id="score-1" class="rate">1</button>
-          <button id="score-2" class="rate">2</button>
-          <button id="score-3" class="rate">3</button>
-          <button id="score-4" class="rate">4</button>
-          <button id="score-5" class="rate">5</button>
-        </div>
+        <form class="rating-score">
+
+          <input type="radio" id="score-1" name="score" value="1">
+          <label class="rate" for="score-1">1</label>
+
+          <input type="radio" id="score-2" name="score" value="2">
+          <label class="rate" for="score-2">2</label>
+
+          <input type="radio" id="score-3" name="score" value="3">
+          <label class="rate" for="score-3">3</label>
+
+          <input type="radio" id="score-4" name="score" value="4">
+          <label class="rate" for="score-4">4</label>
+
+          <input type="radio" id="score-5" name="score" value="5">
+          <label class="rate" for="score-5">5</label>
+
+        </form>
 
         <a id="submit" class="btn" href="#">Submit</a>
       </div>
@@ -44,8 +55,8 @@
         <div class="thanks-title">Thank you!</div>
 
         <div class="thanks-msg">
-        We appreciate you taking the time to give a rating. If you ever need more support,
-        don't hesitate to get in touch!</div>
+          We appreciate you taking the time to give a rating. If you ever need more support,
+          don't hesitate to get in touch!</div>
       </div>
     </div>
     <!-- Thank you state end -->
