removed aria-expanded

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main class="center-my-content">
     <!-- Rating state start -->
     <div class="container">
-      <div id="rating" class="rating" aria-expanded="true">
+      <div id="rating" class="rating">
         <img class="logo" src="./images/icon-star.svg" alt="">
         <h1>How did we do?</h1>
 
@@ -48,7 +48,7 @@
       <!-- Rating state end -->
 
       <!-- Thank you state start -->
-      <div id="thank-you" class="thank-you hidden" aria-expanded="false">
+      <div id="thank-you" class="thank-you hidden">
         <img src="./images/illustration-thank-you.svg" alt="">
         <div id="selected-rate" class="selected-rate" title="You selected @rate out of 5"></div>
 
